<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="false"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:text="@string/Music"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="0"
            android:text="@string/rainbow"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="1"
            android:text="@string/midland"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="2"
            android:text="@string/magic"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="3"
            android:text="@string/charm"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="4"
            android:text="@string/blizzard"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="5"
            android:text="@string/wind"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="6"
            android:text="@string/allure"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="7"
            android:text="@string/flow"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="8"
            android:text="@string/mix"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="9"
            android:text="@string/level"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="10"
            android:text="@string/fantasy"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="11"
            android:text="@string/tale"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:gravity="center"
                android:text="@string/Dynamic"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/numberPicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/NumberPickerText" />

                <NumberPicker
                    android:id="@+id/numberPicker2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/NumberPickerText" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:gravity="center"
                android:text="@string/common"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/numberPicker3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/NumberPickerText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <CheckBox
                                        android:id="@+id/checkBox1"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="8sp"
                                        android:text="@string/random"
                                        android:textSize="14dp"
                                        android:textStyle="bold" />

                                    <CheckBox
                                        android:id="@+id/checkBox2"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="8sp"
                                        android:text="@string/clap"
                                        android:textSize="14dp"
                                        android:textStyle="bold" />

                                </LinearLayout>

                                <Button
                                    android:id="@+id/button16"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="4sp"
                                    android:text="@string/add"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/button17"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="4sp"
                                    android:text="@string/light"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/button15"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/onoff"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_red_light"
                        android:gravity="center"
                        android:text="@string/default_state"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4sp"
                            android:text="@string/save_settings"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/button14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bp"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:gravity="center"
        android:text="@string/control"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:layout_marginTop="6sp"
            android:text="@string/bright"
            android:textSize="16dp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6sp"
            android:layout_weight="1"
            android:max="31"
            android:progress="8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:layout_marginTop="6sp"
            android:text="@string/speed"
            android:textSize="16dp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6sp"
            android:layout_weight="1"
            android:max="200" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ledColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:layout_marginTop="6sp"
            android:text="@string/color"
            android:textSize="16dp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6sp"
            android:layout_weight="1"
            android:max="94"
            android:progress="8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/warmTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:layout_marginTop="6sp"
            android:text="@string/warm"
            android:textSize="16dp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6sp"
            android:layout_weight="1"
            android:max="64"
            android:progress="15" />

        <TextView
            android:id="@+id/coolTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:layout_marginRight="4dp"
            android:text="@string/cool"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/in"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="194dp" />

</LinearLayout>
